@@ -63,6 +63,7 @@ public class ReferenceIndex {
    * @param symbol Символ, для которого необходимо осуществить поиск ссылок.
    * @return Список ссылок на символ.
    */
+  @Transactional
   public List<Reference> getReferencesTo(SourceDefinedSymbol symbol) {
     var mdoRef = MdoRefBuilder.getMdoRef(symbol.getOwner());
     var moduleType = symbol.getOwner().getModuleType();
@@ -100,10 +101,10 @@ public class ReferenceIndex {
    */
   public List<Reference> getReferencesFrom(URI uri) {
 
-    return symbolOccurrenceRepository.getAllByLocationUri(uri).stream()
+    return symbolOccurrenceRepository.getAllByLocationUri(uri)
       .map(this::buildReference)
       .flatMap(Optional::stream)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   /**
